--- a/jesusify/index.html
+++ b/jesusify/index.html
@@ -22,9 +22,9 @@
   <!-- Sidebar -->
   <aside class="sidebar">
     <ul>
-      <li><a href="#">Your Library</a></li>
-      <li><a href="#">Create Playlist</a></li>
-      <li><a href="#">Podcasts</a></li>
+      <li><a href="library.html">Your Library</a></li>
+      <li><a href="playlist.html">Create Playlist</a></li>
+      <li><a href="podcast.html">Podcasts</a></li>
     </ul>
   </aside>
 
