--- a/jesusify/login.html
+++ b/jesusify/login.html
@@ -85,27 +85,72 @@
     .login-footer a:hover {
       text-decoration: underline;
     }
+
+    .error-message {
+      color: red;
+      font-size: 0.9rem;
+      margin-top: 0.5rem;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
 
   <div class="login-container">
     <h2>Welcome Back to Jesusify</h2>
-    <form>
+    <form id="loginForm">
       <div class="form-group">
         <label for="email">Email Address</label>
         <input type="email" id="email" placeholder="you@example.com" required />
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter your password" required />
+        <label for="password">Password <small>(min 6 characters)</small></label>
+        <input type="password" id="password" placeholder="Enter your password" minlength="6" required />
       </div>
       <button type="submit" class="login-btn">Login</button>
+      <div id="error" class="error-message"></div>
     </form>
     <div class="login-footer">
       Don't have an account? <a href="register.html">Register here</a>
     </div>
   </div>
+
+  <script>
+    const form = document.getElementById('loginForm');
+    const errorDiv = document.getElementById('error');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
+
+      if (password.length < 6) {
+        errorDiv.textContent = 'Password must be at least 6 characters.';
+        return;
+      }
+
+      try {
+        const res = await fetch('/api/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        });
+
+        const data = await res.json();
+        if (!res.ok) {
+          errorDiv.textContent = data.error || 'Login failed.';
+          return;
+        }
+
+        // Store JWT and redirect
+        localStorage.setItem('token', data.token);
+        window.location.href = 'index.html';
+      } catch (err) {
+        errorDiv.textContent = 'Server error. Please try again later.';
+      }
+    });
+  </script>
 
 </body>
 </html>
