--- a/jesusify/register.html
+++ b/jesusify/register.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register – Jesusify</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script defer src="Script/reg.js"></script>
   <style>
     body {
       background-color: #f8f9fa;
@@ -20,7 +21,7 @@
       padding: 2rem 2.5rem;
       border-radius: 16px;
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
-      max-width: 450px;
+      max-width: 420px;
       width: 100%;
     }
 
@@ -32,6 +33,7 @@
 
     .form-group {
       margin-bottom: 1.2rem;
+      position: relative;
     }
 
     .form-group label {
@@ -52,6 +54,15 @@
 
     .form-group input:focus {
       border-color: #9c6644;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 12px;
+      top: 36px;
+      cursor: pointer;
+      font-size: 0.9rem;
+      color: #555;
     }
 
     .register-btn {
@@ -85,31 +96,84 @@
     .register-footer a:hover {
       text-decoration: underline;
     }
+
+    .error-message {
+      color: red;
+      font-size: 0.9rem;
+      margin-top: 0.5rem;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
 
   <div class="register-container">
     <h2>Create Your Jesusify Account</h2>
-    <form>
-      <div class="form-group">
-        <label for="username">Full Name</label>
-        <input type="text" id="username" placeholder="John David" required />
-      </div>
+    <form id="registerForm">
       <div class="form-group">
         <label for="email">Email Address</label>
         <input type="email" id="email" placeholder="you@example.com" required />
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Create a password" required />
+        <label for="password">Password <small>(min 6 characters)</small></label>
+        <input type="password" id="password" placeholder="Create a password" minlength="6" required />
+        <span class="toggle-password" onclick="togglePassword()">Show</span>
       </div>
       <button type="submit" class="register-btn">Register</button>
+      <div id="error" class="error-message"></div>
     </form>
     <div class="register-footer">
-      Already have an account? <a href="login.html">Login here</a>
+      Already have an account? <a href="login.html">Login</a>
     </div>
   </div>
+
+  <script>
+    function togglePassword() {
+      const password = document.getElementById('password');
+      const toggle = document.querySelector('.toggle-password');
+      if (password.type === 'password') {
+        password.type = 'text';
+        toggle.textContent = 'Hide';
+      } else {
+        password.type = 'password';
+        toggle.textContent = 'Show';
+      }
+    }
+
+    const form = document.getElementById('registerForm');
+    const errorDiv = document.getElementById('error');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value;
+
+      if (password.length < 6) {
+        errorDiv.textContent = 'Password must be at least 6 characters.';
+        return;
+      }
+
+      try {
+        const res = await fetch('/api/register', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        });
+
+        const data = await res.json();
+        if (!res.ok) {
+          errorDiv.textContent = data.error || 'Registration failed.';
+          return;
+        }
+
+        // Auto-login or redirect
+        localStorage.setItem('token', data.token);
+        window.location.href = 'index.html';
+      } catch (err) {
+        errorDiv.textContent = 'Server error. Please try again.';
+      }
+    });
+  </script>
 
 </body>
 </html>
